# nFlasher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: 99-nflasher-samsung.rules  io.github.nflasher.desktop
nflash/nflasher/: backend.py
nflasher/: __init__.py  __main__.py  backend.py  pit.py  ui.py
tests/: conftest.py  test_backend.py  test_pit.py
