[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "nflasher"
version         = "1.0.0"
description     = "Samsung device flash tool for Linux (nphonecli/odin4/heimdall frontend)"
readme          = "README.md"
license         = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies    = ["pyusb>=1.2.1"]

keywords = ["samsung", "flash", "odin", "heimdall", "android", "firmware", "download-mode"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.5", "black>=23", "ruff>=0.1"]

[project.scripts]
nflasher = "nflasher.ui:main"

[project.gui-scripts]
nflasher-gui = "nflasher.ui:main"

[project.urls]
Homepage      = "https://github.com/YOUR_USERNAME/nflasher"
Repository    = "https://github.com/YOUR_USERNAME/nflasher"
Issues        = "https://github.com/YOUR_USERNAME/nflasher/issues"
Changelog     = "https://github.com/YOUR_USERNAME/nflasher/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["nflasher*"]

[tool.setuptools.package-data]
nflasher = ["py.typed"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ui.py requires a live GTK4 display — skip it in headless CI
addopts = "--ignore=tests/test_ui.py"

[tool.coverage.run]
omit = [
    "*/nflasher/ui.py",  # GTK4 GUI — not importable in headless CI
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise ImportError",
]

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_ignores    = true
disallow_untyped_defs  = false   # GTK bindings make strict mode impractical
